tests/invalid_nodepend/fact_table_in_interface.err_exp2
fact_table_in_interface.m:017: Error: no clauses for function `foo'/1.
fact_table_in_interface.m:018: Error: no clauses for predicate `bar'/2.
fact_table_in_interface.m:020: Error: no clauses for predicate `baz'/2.
fact_table_in_interface.m:021: Error: no clauses for function `baz'/2.
fact_table_in_interface.m:023: mercury_compile.exe: error opening file
fact_table_in_interface.m:023:   `nonexistent_foo' for input:
fact_table_in_interface.m:023:   can't open input file: No such file or
fact_table_in_interface.m:023:   directory
fact_table_in_interface.m:023: Error: `:- pragma fact_table' declaration in
fact_table_in_interface.m:023:   module interface.
fact_table_in_interface.m:024: mercury_compile.exe: error opening file
fact_table_in_interface.m:024:   `nonexistent_bar' for input:
fact_table_in_interface.m:024:   can't open input file: No such file or
fact_table_in_interface.m:024:   directory
fact_table_in_interface.m:024: Error: `:- pragma fact_table' declaration in
fact_table_in_interface.m:024:   module interface.
fact_table_in_interface.m:025: Error: `:- pragma fact_table' declaration in
fact_table_in_interface.m:025:   module interface.
fact_table_in_interface.m:025: In `:- pragma fact_table' declaration for
fact_table_in_interface.m:025:   `baz'/2:
fact_table_in_interface.m:025:   error: ambiguous name could refer to either a
fact_table_in_interface.m:025:   predicate or a function.
